external-crates/move/crates/move-compiler/tests/move_2024/naming/macro_parameter_assignment.exp
error[E02010]: invalid name
  ┌─ tests/move_2024/naming/macro_parameter_assignment.move:2:20
  │
2 │     macro fun call(f: |u64| -> u64, x: u64): u64 {
  │     -----          ^ Invalid parameter name 'f'. 'macro' parameter names must start with '$' (or must be '_')
  │     │               
  │     Declared 'macro' here
  │
  = 'macro' parameters start with '$' to indicate that their arguments are not evaluated before the macro is expanded, meaning the entire expression is substituted. This is different from regular function parameters that are evaluated before the function is called.

error[E02010]: invalid name
  ┌─ tests/move_2024/naming/macro_parameter_assignment.move:2:37
  │
2 │     macro fun call(f: |u64| -> u64, x: u64): u64 {
  │     -----                           ^ Invalid parameter name 'x'. 'macro' parameter names must start with '$' (or must be '_')
  │     │                                
  │     Declared 'macro' here
  │
  = 'macro' parameters start with '$' to indicate that their arguments are not evaluated before the macro is expanded, meaning the entire expression is substituted. This is different from regular function parameters that are evaluated before the function is called.

